# STM_wav_player

./: CMakeLists.txt  LICENSE.md  README.md  dac_dma.ioc  openocd.cfg  openocd.gdb
Inc/: audio_player.h  ffconf.h  lcd.h  main.h  sound.h  stm32h7xx_hal_conf.h  stm32h7xx_it.h  tim.h  wave.h  wavparser.h
Src/: audio_player.c  dac.c  gpio.c  lcd.c  main.c  spi.c  stm32h7xx_it.c  tim.c  usart.c  user_diskio.c  user_diskio_spi.c  wavparser.c
